--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ViewModels\Core\Behaviors\InitializableBehavior.cs" />
     <Compile Include="ViewModels\Core\Behaviors\Keys\CollectionBehaviorKeys.cs" />
     <Compile Include="ViewModels\Core\Behaviors\VMDescriptorConfiguration.cs" />
+    <Compile Include="ViewModels\Core\IViewModel.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\BehaviorConfigurationBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\BehaviorConfigurationDictionary.cs" />
     <Compile Include="ViewModels\Core\Behaviors\- Legacy -\BehaviorConfiguration.cs" />
@@ -205,6 +206,10 @@
     <Compile Include="ViewModels\Core\ViewModelBehaviors\ViewModelBehavior.cs" />
     <Compile Include="ViewModels\Core\ViewModelExtensibility.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBaseExtensionMethods.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\CollectionPropertyValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\CollectionValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\PropertyValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\ValidatorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMPropertyExtensionMethods.cs" />
     <Compile Include="ViewModels\ExtensionMethods.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\VMDescriptorBase.cs" />
