--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -59,9 +59,11 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiTests\ViewModels\CollectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\DisplayValueTests.cs" />
     <Compile Include="ApiTests\ViewModels\Domain\RichText.cs" />
     <Compile Include="ApiTests\ViewModels\Domain\Task.cs" />
+    <Compile Include="ApiTests\ViewModels\Domain\TaskRepository.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\GeneralValidationTests.cs" />
     <Compile Include="ApiTests\ViewModels\TypeDescriptorTests.cs" />
     <Compile Include="ApiTests\ViewModels\AccessPropertyTests.cs" />
@@ -71,6 +73,7 @@
     <Compile Include="ApiTests\ViewModels\Validation\ValidationModeTests.cs" />
     <Compile Include="ApiTests\ViewModels\Validation\ValidationScopeTests.cs" />
     <Compile Include="ApiTests\ViewModels\VMs\AreaVM.cs" />
+    <Compile Include="ApiTests\ViewModels\VMs\TaskListVM.cs" />
     <Compile Include="ApiTests\ViewModels\VMs\TaskVM.cs" />
     <Compile Include="AssertHelper.cs" />
     <Compile Include="Bootstrapper.cs" />
