--- a/trunk/MvvmContrib/MvvmContrib.csproj
+++ b/trunk/MvvmContrib/MvvmContrib.csproj
@@ -58,6 +58,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
@@ -94,10 +95,10 @@
     <Compile Include="ViewModels\SingleSelectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\SingleSelectionVM.cs" />
     <Compile Include="Screens\IMessageBoxService.cs" />
+    <Compile Include="Views\CustomKeyGesture.cs" />
+    <Compile Include="Views\CustomKeyGestureExtension.cs" />
+    <Compile Include="Views\KeyGestureViewBinderExtension.cs" />
     <Compile Include="Views\SelectionBinderExtensions.cs" />
-    <Compile Include="Views\UnrestrictedKeyBinding.cs" />
-    <Compile Include="Views\UnrestrictedKeyBindingConverter.cs" />
-    <Compile Include="Views\UnrestrictedKeyGestureValueSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mvvm\Mvvm.csproj">
