Started to refactor property builder syntax.

--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -142,12 +142,13 @@
     <Compile Include="ViewModels\Core\Behaviors\- Legacy -\IBehaviorConfigurationExpression.cs" />
     <Compile Include="ViewModels\Core\Behaviors\- Legacy -\VMBehaviorKey.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\ConfigurationProvider.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyFactoryLocal.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMCollectionPropertyFactory.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMCollectionPropertyFactoryWithSource.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyFactory.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyFactoryBase.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyFactoryWithSource.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryLocal.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\ValuePropertyBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMCollectionPropertyFactory.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMCollectionPropertyFactoryWithSource.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactory.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryBase.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryWithSource.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidationBuilder.cs" />
     <Compile Include="ViewModels\Core\CollectionModificationController.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\CollectionValidationBuilder.cs" />
@@ -218,12 +219,18 @@
     <Compile Include="ViewModels\Core\VMDescriptor\VMDescriptorBase.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\VMPropertyCollection.cs" />
     <Compile Include="ViewModels\Core\- Todo -\ICreatableItem.cs" />
-    <Compile Include="ViewModels\Fluent\IConfigurationProvider.cs" />
-    <Compile Include="ViewModels\Fluent\ILocalVMPropertyFactory.cs" />
-    <Compile Include="ViewModels\Fluent\IVMCollectionPropertyFactory.cs" />
-    <Compile Include="ViewModels\Fluent\IVMCollectionPropertyFactoryWithSource.cs" />
-    <Compile Include="ViewModels\Fluent\IVMPropertyFactory.cs" />
-    <Compile Include="ViewModels\Fluent\IVMPropertyFactoryWithSource.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\IConfigurationProvider.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\ILocalVMPropertyFactory.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\IVMCollectionPropertyFactory.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\IVMCollectionPropertyFactoryWithSource.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\IVMPropertyFactory.cs" />
+    <Compile Include="ViewModels\Fluent\- Legacy -\IVMPropertyFactoryWithSource.cs" />
+    <Compile Include="ViewModels\Fluent\ICollectionPropertyBuilder.cs" />
+    <Compile Include="ViewModels\Fluent\ICollectionPropertyBuilderWithSource.cs" />
+    <Compile Include="ViewModels\Fluent\IVMPropertyBuilder.cs" />
+    <Compile Include="ViewModels\Fluent\IValuePropertyBuilder.cs" />
+    <Compile Include="ViewModels\Fluent\IViewModelPropertyBuilder.cs" />
+    <Compile Include="ViewModels\Fluent\IViewModelPropertyBuilderWithSource.cs" />
     <Compile Include="ViewModels\IHasSourceObject.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IVMContext.cs" />
@@ -273,7 +280,7 @@
     <Compile Include="ViewModels\IVMValueConverter.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMBehaviorConfigurator.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMDescriptorBuilder.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyFactoryProvider.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyBuilderProvider.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMDependencyConfigurator.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyFactory.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
